@@ -37,7 +37,10 @@ G_BEGIN_DECLS
 enum {
 	MCUS_PARSER_ERROR_INVALID_LABEL,
 	MCUS_PARSER_ERROR_INVALID_INSTRUCTION,
-	MCUS_PARSER_ERROR_INVALID_OPERAND
+	MCUS_PARSER_ERROR_INVALID_OPERAND,
+	MCUS_PARSER_ERROR_INVALID_OPERAND_TYPE,
+	MCUS_PARSER_ERROR_UNRESOLVABLE_LABEL,
+	MCUS_PARSER_ERROR_MEMORY_OVERFLOW
 };
 
 typedef struct _MCUSParserPrivate	MCUSParserPrivate;
